crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply_parenthetical_tag_args_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "Whee (12) (34)\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            UpperIdent=>UpperIdent@0
            InlineApply=>UpperIdent@0
            (BeginParens Num=>Int@2 EndParens)
            InlineApply=>CloseRound@3
            (BeginParens Num=>Int@5 EndParens)
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(UpperIdent("Whee"), [IntBase10("12"), IntBase10("34")])

[=== formatted below ===]

