crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply_tag_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "Whee 12 34\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            UpperIdent=>UpperIdent@0
            InlineApply=>UpperIdent@0
            Num=>IntBase10@1
            InlineApply=>IntBase10@1
            Num=>IntBase10@2
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(UpperIdent("Whee"), [IntBase10("12"), IntBase10("34")])

[=== formatted below ===]

