crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply_three_args_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a b c d\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Ident=>LowerIdent@0
        InlineApply=>LowerIdent@0
        Ident=>LowerIdent@1
        InlineApply=>LowerIdent@1
        Ident=>LowerIdent@2
        InlineApply=>LowerIdent@2
        Ident=>LowerIdent@3
    EndApply)
EndTopLevelDecls)

[=== canfmt below ===]
Apply(Ident("a"), [Ident("b"), Ident("c"), Ident("d")])

[=== formatted below ===]

