crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply_unary_negation_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-whee  12 foo\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            (* Ident=>LowerIdent@1 EndUnaryMinus)
            InlineApply=>LowerIdent@1
            Num=>IntBase10@2
            InlineApply=>IntBase10@2
            Ident=>LowerIdent@3
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(UnaryOp(Minus, Ident("whee")), [IntBase10("12"), Ident("foo")])

[=== formatted below ===]

