crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__apply_unary_negation_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "-whee 12 foo\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        (* Ident=>LowerIdent@1 EndUnaryMinus)
        InlineApply=>LowerIdent@1
        Num=>IntBase10@2
        InlineApply=>IntBase10@2
        Ident=>LowerIdent@3
    EndApply)
EndTopLevelDecls)

[=== canfmt below ===]
Apply(UnaryOp(Minus, Ident("whee")), [IntBase10("12"), Ident("foo")])

[=== formatted below ===]

