crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__basic_apply_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "whee 1\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            Num=>IntBase10@1
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("whee"), [IntBase10("1")])

[=== formatted below ===]

