crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__basic_field_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "rec.field\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (* Ident=>LowerIdent@0 DotIdent=>NoSpaceDotLowerIdent@1 EndFieldAccess)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
RecordAccess(Ident("rec"), ".field")

[=== formatted below ===]

